--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -417,7 +417,8 @@
                     "team_no_spawn_there": "<red>There is no spawnpoint at this position.",
                     "nothing_in_hand": "<red>You are not holding any item in your hand!",
                     "invalid_item": "<red>Value <gray><item><red> is not a valid item!",
-                    "overlapping_arenas": "<red>The chosen location causes the arena to overlap with another arena, which can lead to errors! Please choose a different location. If you insist on using this location, execute <gray><command>"
+                    "overlapping_arenas": "<red>The chosen location causes the arena to overlap with another arena, which can lead to errors! Please choose a different location. If you insist on using this location, execute <gray><command>",
+                    "invalid_prefab": "<red>No prefab called <gray><name><red> is configured in variant <gray><variant><red>!"
                 },
                 "success": {
                     "saved_and_started": "<green>The game has been successfully saved and is running! Now you can join and play in the arena!",
